# project1

./: .env.example  .gitignore  DOCKER.md  IMPLEMENTATION_DEBUG_CAPTURE.md  IMPLEMENTATION_SCHEDULER_MONITORING.md  IMPLEMENTATION_SUMMARY.md  MERGE_FIX_SUMMARY.md  MERGE_RESOLUTION.md  MONITORING_FEATURE_COMPLETION.md  README.md  SLA_ANALYTICS_IMPLEMENTATION.md  docker-compose.dev.yml  docker-compose.yml  project1.py
backend/: .dockerignore  .env.example  DEBUG_CAPTURE.md  Dockerfile  MONITORING_MODELS_SUMMARY.md  MONITORING_QUICK_REFERENCE.md  QUICKSTART.md  README.md  SCHEDULER_MONITORING.md  SLA_ANALYTICS_DOCUMENTATION.md  SLA_ANALYTICS_README.md  entrypoint.sh  example_debug_session.py  example_monitoring_usage.py  pyproject.toml  requirements.txt  setup_playwright.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_debug_session_tables.py  004836b37ca7_add_websites_monitoring_and_debug_models.py  1a96e5049f0d_add_monitoring_models.py  a52eb8fd382e_add_website_monitoring_models.py  d98cc6138310_add_monitoring_models_for_sla_analytics.py
backend/app/: main.py
backend/app/api/: __init__.py  debug.py  dependencies.py  health.py  monitoring.py  (+2 more)
backend/docs/: API_EXAMPLES.md  MONITORING_IMPLEMENTATION.md  REST_API_IMPLEMENTATION.md
backend/tests/: test_debug.py  test_debug_integration.py  test_debug_session.py  test_health.py  test_integration_monitoring_flow.py  test_monitoring.py  test_monitoring_models.py  test_monitoring_task.py  test_scheduler.py  test_sla.py  test_sla_analytics.py  test_websites.py  test_websites_api.py
(+70 files in other folders)
